pkg/front_end/testcases/inference/map_literals_top_level.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

static field core::Map<core::int, core::String> x1 = <core::int, core::String>{1: "x", 2: "y"};
static field core::Map<core::num, core::Pattern> x2 = <core::num, core::Pattern>{1: "x", 2: "y", 3.0: core::RegExp::•(".")};
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/map_literals_top_level.dart:14:27: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  x1 /*@target=Map::[]=*/ [/*error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ 'hi'] = 'w';\n                          ^", "pkg/front_end/testcases/inference/map_literals_top_level.dart:15:27: Error: A value of type 'dart.core::double' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  x1 /*@target=Map::[]=*/ [/*error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ 4.0] = 'u';\n                          ^", "pkg/front_end/testcases/inference/map_literals_top_level.dart:16:27: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n  x1 /*@target=Map::[]=*/ [3] = /*error:INVALID_ASSIGNMENT*/ 42;\n                          ^", "pkg/front_end/testcases/inference/map_literals_top_level.dart:27:27: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::num'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::num'.\n  x2 /*@target=Map::[]=*/ [/*error:ARGUMENT_TYPE_NOT_ASSIGNABLE*/ 'hi'] = 'w';\n                          ^", "pkg/front_end/testcases/inference/map_literals_top_level.dart:29:27: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::Pattern'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::Pattern'.\n  x2 /*@target=Map::[]=*/ [3] = /*error:INVALID_ASSIGNMENT*/ 42;\n                          ^"]/* from null */;
static method test1() → dynamic {
  self::x1.{core::Map::[]=}(3, "z");
  self::x1.{core::Map::[]=}("hi" as{TypeError} core::int, "w");
  self::x1.{core::Map::[]=}(4.0 as{TypeError} core::int, "u");
  self::x1.{core::Map::[]=}(3, 42 as{TypeError} core::String);
  core::Map<core::num, core::String> y = self::x1;
}
static method test2() → dynamic {
  self::x2.{core::Map::[]=}(3, "z");
  self::x2.{core::Map::[]=}("hi" as{TypeError} core::num, "w");
  self::x2.{core::Map::[]=}(4.0, "u");
  self::x2.{core::Map::[]=}(3, 42 as{TypeError} core::Pattern);
  core::Pattern p = null;
  self::x2.{core::Map::[]=}(2, p);
  core::Map<core::int, core::String> y = self::x2 as{TypeError} core::Map<core::int, core::String>;
}
static method main() → dynamic {}
